# bettergit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: RELEASE_NOTES.md  USER_GUIDE.md
src/bettergit/: __init__.py  config.py
src/bettergit/cli/: main.py  utils.py
src/bettergit/cli/commands/: add.py  branch.py  branch_info.py  branches.py  commit.py  create_branch.py  create_tag.py  delete_branch.py  delete_tag.py  push.py  suggest.py  switch.py  tag.py
src/bettergit/core/: branchmeta.py  classify.py  gitio.py  template.py
src/bettergit/llm/: __init__.py  client.py  pipeline.py  prompts.py
tests/: test_classify.py
